# skill_cortex_server

./: README.md  import_skills.py  pyproject.toml  tags.md
.kiro/specs/enhanced-skills-import/: design.md  requirements.md  tasks.md
.skill_cortex_cache/: index.json
.skills/imported/anthropics_skills/skills/algorithmic-art/: SKILL.md
.skills/imported/anthropics_skills/skills/brand-guidelines/: SKILL.md
.skills/imported/anthropics_skills/skills/canvas-design/: SKILL.md
.skills/imported/anthropics_skills/skills/doc-coauthoring/: SKILL.md
.skills/imported/anthropics_skills/skills/docx/: SKILL.md
.skills/imported/anthropics_skills/skills/frontend-design/: SKILL.md
.skills/imported/anthropics_skills/skills/internal-comms/: SKILL.md
.skills/imported/anthropics_skills/skills/mcp-builder/: SKILL.md
.skills/imported/anthropics_skills/skills/pdf/: SKILL.md
.skills/imported/anthropics_skills/skills/pptx/: SKILL.md
.skills/imported/anthropics_skills/skills/skill-creator/: SKILL.md
.skills/imported/anthropics_skills/skills/slack-gif-creator/: SKILL.md
.skills/imported/anthropics_skills/skills/theme-factory/: SKILL.md
.skills/imported/anthropics_skills/skills/web-artifacts-builder/: SKILL.md
.skills/imported/anthropics_skills/template/: SKILL.md
config/: README.md
config/examples/: skills-config.json  skills-config.yaml
skill_cortex/: config.py  frontmatter.py  index_store.py  models.py  scanner.py  server.py  tags_registry.py
skill_cortex_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+2 files in other folders)
