[project]
name = "skill-cortex-lite"
version = "0.1.0"
description = "Skill-Cortex (Lite) MCP server"
requires-python = ">=3.11"
dependencies = [
	"mcp>=0.9.0",
]

[project.scripts]
skill-cortex = "skill_cortex.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
